Use github actions to build and test kb-sdk